--- a/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
+++ b/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 03:02:19 GMT
+    - Thu, 22 Mar 2018 17:29:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b9hTHxwVTAJH6wY6amIPm2; path=/
+    - PHPSESSID=nsV2cS32zNf%2CRNKKAVLfr3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 03:02:19 GMT
+recorded_at: Thu, 22 Mar 2018 17:29:47 GMT
