--- a/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
+++ b/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 12:56:59 GMT
+    - Fri, 23 Mar 2018 05:03:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CE-piBu8E%2Cq-MIuTdgKxY0; path=/
+    - PHPSESSID=3iYjRx7Bv%2C7n4NuM8utgX2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 12:56:59 GMT
+recorded_at: Fri, 23 Mar 2018 05:03:29 GMT
