--- a/www.nass.gov.ng/7f12cf3bc6c4e05b09079445285be49b827e0b8a.yml
+++ b/www.nass.gov.ng/7f12cf3bc6c4e05b09079445285be49b827e0b8a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:02:16 GMT
+    - Fri, 23 Mar 2018 05:07:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w%2CIUzYRGCK8uPrQxR5Tx%2C3; path=/
+    - PHPSESSID=oCDuomxypaaM-klkE2oTt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:02:16 GMT
+recorded_at: Fri, 23 Mar 2018 05:07:49 GMT
