--- a/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
+++ b/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:08:09 GMT
+    - Fri, 23 Mar 2018 05:16:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FeBH%2CI507827n1IMbCdPQ0; path=/
+    - PHPSESSID=G5A-2NgBSD9jHHmYlfBRK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:08:09 GMT
+recorded_at: Fri, 23 Mar 2018 05:16:11 GMT
