--- a/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
+++ b/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:10:05 GMT
+    - Fri, 23 Mar 2018 05:18:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DIx%2CM6b8mImdqbK8Jl0en1; path=/
+    - PHPSESSID=qHelQ%2C7S1ngoNqew7D8qX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:10:06 GMT
+recorded_at: Fri, 23 Mar 2018 05:18:30 GMT
