--- a/www.nass.gov.ng/0e66ca2aeda5759e855c819263b1b6c836b3a74b.yml
+++ b/www.nass.gov.ng/0e66ca2aeda5759e855c819263b1b6c836b3a74b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:16:06 GMT
+    - Fri, 23 Mar 2018 05:25:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=guzoQCqt2%2C0ynP6zdFqg21; path=/
+    - PHPSESSID=NDx7lX7KO2dv0r9uepi3w1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:16:06 GMT
+recorded_at: Fri, 23 Mar 2018 05:25:23 GMT
