--- a/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
+++ b/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:17:15 GMT
+    - Fri, 23 Mar 2018 05:26:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HHwA%2CFOetKfKZM2IDFuOM2; path=/
+    - PHPSESSID=HZm5PuVaEj8vab9D%2C0N7p3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:17:15 GMT
+recorded_at: Fri, 23 Mar 2018 05:26:49 GMT
