--- a/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
+++ b/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:21:38 GMT
+    - Fri, 23 Mar 2018 05:29:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hiMAcqXVoUflJj2SbzvmZ2; path=/
+    - PHPSESSID=u%2CeMuGBjzJvqULRNAKUku1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:21:39 GMT
+recorded_at: Fri, 23 Mar 2018 05:29:56 GMT
