--- a/www.nass.gov.ng/2f82a78f4dc2d4ba4f917028b95f82468cd5a0d8.yml
+++ b/www.nass.gov.ng/2f82a78f4dc2d4ba4f917028b95f82468cd5a0d8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:27:09 GMT
+    - Fri, 23 Mar 2018 05:37:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AJfNbwe4D-Z-1v-epprVX0; path=/
+    - PHPSESSID=p6pxlI9%2CxYKN5UGEwLj8M0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:27:09 GMT
+recorded_at: Fri, 23 Mar 2018 05:37:53 GMT
