--- a/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
+++ b/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:34:14 GMT
+    - Fri, 23 Mar 2018 05:46:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aq62MTKF8abOd6-OoDD911; path=/
+    - PHPSESSID=%2C3c8ETemeFnT2RDJ2DFzS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:34:14 GMT
+recorded_at: Fri, 23 Mar 2018 05:46:34 GMT
