--- a/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
+++ b/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:39:33 GMT
+    - Fri, 23 Mar 2018 05:49:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hEssRLF-oW3%2C58accJMLX1; path=/
+    - PHPSESSID=-Q6xmkBmKrcT9yQB7Jjuu1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:39:34 GMT
+recorded_at: Fri, 23 Mar 2018 05:49:58 GMT
