--- a/www.nass.gov.ng/abcd388626da68ad818c8b910bf086e7aeff77c3.yml
+++ b/www.nass.gov.ng/abcd388626da68ad818c8b910bf086e7aeff77c3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:40:22 GMT
+    - Fri, 23 Mar 2018 05:51:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wQjZq5Dkyb3zE3loFQq9W1; path=/
+    - PHPSESSID=jTAf8NA%2C0EMksjHUUZhAF2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:40:23 GMT
+recorded_at: Fri, 23 Mar 2018 05:51:45 GMT
