--- a/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
+++ b/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:42:40 GMT
+    - Fri, 23 Mar 2018 05:53:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PWPiahihl7tNAvKgx9Qba1; path=/
+    - PHPSESSID=LXkvacJr7jRLxKM4WKp%2C23; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:42:40 GMT
+recorded_at: Fri, 23 Mar 2018 05:53:28 GMT
