--- a/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
+++ b/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:46:01 GMT
+    - Fri, 23 Mar 2018 05:57:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=i4%2CaZ2X0tk49v1tVGDFYg3; path=/
+    - PHPSESSID=AifIvbirWp0LXf03rmv3B0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:46:01 GMT
+recorded_at: Fri, 23 Mar 2018 05:57:33 GMT
