--- a/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
+++ b/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:46:35 GMT
+    - Fri, 23 Mar 2018 05:58:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uihh2kgXFixH5bJ7QfvGe0; path=/
+    - PHPSESSID=pOa2k2LIWwJz%2C9opeTOjH2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:46:35 GMT
+recorded_at: Fri, 23 Mar 2018 05:58:17 GMT
