--- a/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
+++ b/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:47:03 GMT
+    - Fri, 23 Mar 2018 05:58:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zw8bFIp86u5msV-FA9m961; path=/
+    - PHPSESSID=PH3Z5LKFvF9-R%2C-YYdKX71; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:47:03 GMT
+recorded_at: Fri, 23 Mar 2018 05:58:59 GMT
