--- a/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
+++ b/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:48:32 GMT
+    - Fri, 23 Mar 2018 06:01:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=t0WA3oCrc8mfjLyLEk7mM3; path=/
+    - PHPSESSID=8YL6x%2CGmEvJb4294paSja2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:48:32 GMT
+recorded_at: Fri, 23 Mar 2018 06:01:20 GMT
