--- a/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
+++ b/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 13:54:03 GMT
+    - Fri, 23 Mar 2018 06:08:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7ouosylNmdR%2C5UKQ3veRW0; path=/
+    - PHPSESSID=Mnkm2zYiiYGeexa%2CE7ENr0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 13:54:03 GMT
+recorded_at: Fri, 23 Mar 2018 06:08:43 GMT
