--- a/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
+++ b/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:00:11 GMT
+    - Fri, 23 Mar 2018 06:15:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E%2CxAUXdfKkDPXcJqChOsm0; path=/
+    - PHPSESSID=bsxgHwQaiYVEG9FxizEJI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:00:11 GMT
+recorded_at: Fri, 23 Mar 2018 06:15:16 GMT
