--- a/www.nass.gov.ng/697b0b688170e5b51c1a5d3ceee6c4fa34eb1d49.yml
+++ b/www.nass.gov.ng/697b0b688170e5b51c1a5d3ceee6c4fa34eb1d49.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:03:15 GMT
+    - Fri, 23 Mar 2018 06:17:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q1JXg8yC3ODTEHOgv%2CZGo1; path=/
+    - PHPSESSID=%2CqItGNGhIne-9deRQho6R0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:03:15 GMT
+recorded_at: Fri, 23 Mar 2018 06:17:55 GMT
