--- a/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
+++ b/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:10:19 GMT
+    - Fri, 23 Mar 2018 06:23:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q%2CGMhD4D8eY9oeaI%2CYnXM3; path=/
+    - PHPSESSID=eT6589P6ndS6BL2aPiEG92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:10:19 GMT
+recorded_at: Fri, 23 Mar 2018 06:23:58 GMT
