--- a/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
+++ b/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:17:31 GMT
+    - Fri, 23 Mar 2018 06:31:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JkDAUbKuZ0-eC9tboffwm2; path=/
+    - PHPSESSID=05JGGPBC2msU-i1-lhv%2CW1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:17:31 GMT
+recorded_at: Fri, 23 Mar 2018 06:31:49 GMT
