--- a/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
+++ b/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:18:59 GMT
+    - Fri, 23 Mar 2018 06:32:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=h4wh6szRUKrnY4NuuR8xb2; path=/
+    - PHPSESSID=3hnJ4b4sGKDosUh%2CPHuKe0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:18:59 GMT
+recorded_at: Fri, 23 Mar 2018 06:32:48 GMT
