--- a/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
+++ b/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:20:43 GMT
+    - Fri, 23 Mar 2018 06:35:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JCihirXWG%2C4SjGcxAVit41; path=/
+    - PHPSESSID=1OanzcVFlp1Jk1i4Whq4J2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:20:43 GMT
+recorded_at: Fri, 23 Mar 2018 06:35:20 GMT
