--- a/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
+++ b/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:21:00 GMT
+    - Fri, 23 Mar 2018 06:36:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v-FXjrNf%2C9KaYIv%2C47SLv1; path=/
+    - PHPSESSID=%2CUDy2H1lRFYe9T9t2Bvun2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:21:00 GMT
+recorded_at: Fri, 23 Mar 2018 06:36:11 GMT
