--- a/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
+++ b/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:21:40 GMT
+    - Fri, 23 Mar 2018 06:36:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CRTqKPpeEAbUbS0pYb6LZ2; path=/
+    - PHPSESSID=JluNE3eTXFV0FoPjVvEjj2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:21:40 GMT
+recorded_at: Fri, 23 Mar 2018 06:36:28 GMT
