--- a/www.nass.gov.ng/13c59ee25497b850b7c3292a5e5dae12a5817138.yml
+++ b/www.nass.gov.ng/13c59ee25497b850b7c3292a5e5dae12a5817138.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:23:01 GMT
+    - Fri, 23 Mar 2018 06:37:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yoWEMt1eO-OzoBNwOJnrh3; path=/
+    - PHPSESSID=y4ayXUiN1ktyW%2CEnPl9ab2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:23:02 GMT
+recorded_at: Fri, 23 Mar 2018 06:37:24 GMT
